# MB-scanner

./: .dockerignore  .env.sample  .gitignore  .gitmodules  .mise.toml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  exclude-list.txt  justfile  pyproject.toml  result.json
.agents/skills/check-architecture/: SKILL.md
.agents/skills/check-schedule/: SKILL.md
.agents/skills/check-tests/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/finish-worktree/: SKILL.md  cleanup-worktree.sh  save-worktree-tmp.sh
.agents/skills/generate-types/: SKILL.md  run-codegen.sh
.agents/skills/reflect-changes/: SKILL.md
.claude/: settings.json
.claude/commands/: generate-types.md  start-impl.md
.claude/hooks/: quality-gate.sh
.claude/skills/: check-architecture  check-schedule  check-tests  finish-worktree  generate-types  reflect-changes  start-worktree
.github/: pull_request_template.md
ai-guide/: architecture.md  code-map.md  coding-guidelines.md  current-research.md  db-design.md  development-setup.md  file-encoding-guidelines.md  index.md  project-overview.md  quality-check.md  setup-guide.md  testing-guidelines.md
ai-guide/adr/: 0002-babel-topdown-subtree-hash.md  0003-bottom-up-mapping-deferred.md  0004-pruning-setup-single.md  0005-grammar-derived-blacklist.md  0006-grammar-derived-whitelist.md  0007-in-source-testing-internal-helpers.md  README.md
ai-guide/architecture/: index.md  mb-analyzer.md  mb-scanner.md
ai-guide/datasets/: selakovic-2016-issues.md
ai-guide/doc-strategy/: index.md
ai-guide/quality-check/: index.md  mb-analyzer.md  mb-scanner.md
benchmark/: build.mjs  checker.ts  runner.ts  tsconfig.json
benchmark/strategies/: functions.ts  stdout.ts
data/: mb_scanner.db
mb-analyzer/: .gitignore  README.md  build.mjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
mb-analyzer-legacy/: README.md  package.json  pnpm-workspace.yaml  vitest.config.ts
mb_scanner/: cli.py
mb_scanner/cli/: __init__.py  benchmark.py  codeql.py  count_lines.py  github.py  migrate.py  search.py  visualize.py
mb_scanner/core/: config.py  logging_config.py
mb_scanner/db/: __init__.py  base.py  migrations.py  session.py
mb_scanner/infrastructure/: config.py
mb_scanner/lib/: __init__.py
mb_scanner/models/: __init__.py  benchmark.py  project.py
mb_scanner/services/: __init__.py  benchmark_runner.py  project_search_service.py  project_service.py  topic_service.py  visualization_service.py
mb_scanner/use_cases/: benchmark_runner.py  equivalence_verification.py
mb_scanner/utils/: __init__.py
mb_scanner/workflows/: __init__.py  codeql_database_creation.py  codeql_query_execution.py  search_and_store.py
tests/: conftest.py  test_cli.py
tests/cli/: test_benchmark.py  test_codeql.py  test_github.py
tests/core/: __init__.py  test_config.py  test_logging_config.py
tests/db/: test_migrations.py
tests/fixtures/: invalid_query_result.json  sample_query_result.json
tests/infrastructure/: test_config.py  test_logging_config.py
tests/lib/: test_github_clone.py
tests/models/: __init__.py  test_benchmark.py
tests/services/: __init__.py  test_benchmark_runner.py  test_project_service.py  test_topic_service.py  test_visualization_service.py
tests/use_cases/: test_benchmark_runner.py  test_codeql_database_creation.py  test_codeql_query_execution.py  test_equivalence_verification.py  test_search_and_store.py  test_visualization.py
tests/workflows/: __init__.py  test_codeql_database_creation.py  test_codeql_query_execution.py  test_search_and_store.py
(+203 files in other folders)
